# pytorrent

./: LICENSE  README.md  TODO.md  api.py  main.py  pyproject.toml  pytorrent.py
data/: data.txt.torrent
pytorrent/: pytorrent.py
svelte/: package-lock.json  package.json  svelte.config.js
svelte/src/: app.html
svelte/src/routes/: +layout.js  +page.svelte
test/: test_pytorrent.py
test/examples/: ones.txt.torrent
