[project]
name = "torrentclient"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bencoder>=0.2.0",
    "fastapi[standard]>=0.115.8",
    "requests>=2.32.3",
    "ruff>=0.9.3",
    "starlette>=0.45.3",
]

[[tool.mypy.overrides]]
module = ["bencoder.*"]
follow_untyped_imports = true
